First round of completed project

--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     </head>
     <body>
         <div id="workshopImage">
-
+            <div id="logoContainer">
+                <img src= "img/title_wideopentech.png" id="logo">
+            </div>
+            <div id="menuContainer">
+                <pre>SERVICES   COMPANY   PROTFOLIO   CAREERS   BLOG   CONTACT</pre>
+            </div>
         </div>
+
         
     </body>
 </html>
